Initial board generation

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <html>
   <head>
     <title>Memory Game</title>
+    <link rel="stylesheet" href="css/main.css" type="text/css" />
   </head>
   <body>
+    <div id="game-wrapper"></div>
     <script type="text/html" charset="utf-8" id="template-menu">
       <ul>
         <li>Start New Game</li>
       </ul>
     </script>
+    <script type="text/javascript" charset="utf-8" src="js/main.js"></script>
   </body>
 </html>
