--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <link rel="stylesheet" href="css/main.css" type="text/css" />
   </head>
   <body>
-    <section id="game-screen">
+    <section id="match-screen">
       <header>
         <div>
           <strong>Score:</strong>
-          <span id="game-score">0</span>
+          <span id="match-score">0</span>
         </div>
         <div>
           <strong>Misses:</strong>
-          <span id="game-misses">0</span>
+          <span id="match-misses">0</span>
         </div>
       </header>
-      <div id="game-board"></div>
+      <div id="match-board"></div>
     </section>
     <script type="text/javascript" charset="utf-8" src="js/main.js"></script>
   </body>
