--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
           <strong>Misses:</strong>
           <span id="match-misses">0</span>
         </div>
+        <div>
+          <strong>Timer:</strong>
+          <span id="match-timer">00:00</span>
+        </div>
       </header>
       <div id="match-board"></div>
     </section>
