Add initial size definitions

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <div>
         <h2>New Match</h2>
         <select name="game-mode" id="game-mode">
-          <option value="easy" selected>Easy</option>
-          <option value="medium" disabled>Medium</option>
-          <option value="hard" disabled>Hard</option>
+          <option value="easy">Easy</option>
+          <option value="medium" selected>Medium</option>
+          <option value="hard">Hard</option>
         </select>
         <select name="game-theme" id="game-theme">
           <option value="pokemon" selected>Pokémon</option>
@@ -21,6 +21,7 @@
       <ul>
         <li><a href="#" id="game-menu-rules">Rules</a></li>
         <li><a href="#" id="game-menu-about">About</a></li>
+        <li><a href="#" id="game-menu-quit">Quit</a></li>
       </ul>
     </section>
     <section id="match-screen" class="hidden">
