--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Memory Game</title>
     <link rel="stylesheet" href="css/main.css" type="text/css" />
+    <link rel="stylesheet" href="css/theme-pokemon.css" type="text/css" />
   </head>
   <body>
     <h1>Memory Game</h1>
