Initial board layout

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="#" class="btn" data-mode="hard">Hard</a>
           </div>
         </div>
+        <a href="#" id="game-menu-score-board" class="btn">Score Board</a>
         <a href="rules.html" class="btn">How to Play</a>
         <a href="#" id="game-menu-quit" class="btn">Quit Game</a>
       </section>
@@ -39,6 +40,12 @@
           </div>
         </header>
         <div id="match-board"></div>
+      </section>
+      <section id="score-board" class="hidden">
+        <h2>Score Board</h2>
+        <ol></ol>
+        <div id="score-board-empty" class="hidden">You haven't played yet!</div>
+        <a href="index.html" class="btn">Menu</a>
       </section>
       <footer>
         <div class="credits">
