--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
       </section>
       <section id="score-board" class="hidden">
         <h2>Score Board</h2>
-        <ol></ol>
+        <ol class="hidden"></ol>
         <div id="score-board-empty" class="hidden">You haven't played yet!</div>
-        <a href="index.html" class="btn">Menu</a>
+        <div class="btn-group">
+          <a href="index.html" class="btn">Menu</a>
+          <a href="#" class="btn">Close</a>
+        </div>
       </section>
       <footer>
         <div class="credits">
