Limit scores to top 10

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <ol class="hidden"></ol>
         <div id="score-board-empty" class="hidden">You haven't played yet!</div>
         <div class="btn-group">
-          <a href="index.html" class="btn">Menu</a>
-          <a href="#" class="btn">Close</a>
+          <a href="index.html" class="btn hidden" id="score-board-menu">Menu</a>
+          <a href="#" class="btn hidden" id="score-board-close">Close</a>
         </div>
       </section>
       <footer>
