--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Memory Game</title>
     <link href='http://fonts.googleapis.com/css?family=Capriola' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css" type="text/css" />
@@ -24,7 +25,7 @@
       <section id="match-screen" class="hidden">
         <header>
           <div class="match-right-menu">
-            <a href="index.html" id="match-quit">Quit Match</a>
+            <a href="/" id="match-quit">Quit Match</a>
           </div>
           <div class="match-display">
             <strong>Score</strong>
@@ -43,10 +44,12 @@
       </section>
       <section id="score-board" class="hidden">
         <h2>Score Board</h2>
-        <ol class="hidden"></ol>
-        <div id="score-board-empty" class="hidden">You haven't played yet!</div>
+        <div id="score-board-content">
+          <ol class="hidden"></ol>
+          <div id="score-board-empty" class="hidden">You haven't played yet!</div>
+        </div>
         <div class="btn-group">
-          <a href="index.html" class="btn hidden" id="score-board-menu">Menu</a>
+          <a href="/" class="btn hidden" id="score-board-menu">Menu</a>
           <a href="#" class="btn hidden" id="score-board-close">Close</a>
         </div>
       </section>
@@ -61,8 +64,14 @@
           <strong>Animation Inspiration:</strong>
           <a href="http://daneden.github.io/animate.css/">Daniel Eden</a>
         </div>
+        <div class="credits">
+          Pokémon images and sounds are trademarks of Nintendo.<br> No copyright or trademark infringement is intended in using Pokémon content on this demo project.
+        </div>
       </footer>
     </div>
+    <audio src="/sounds/pokemon-opening.mp3" id="sound-opening" loop></audio>
+    <audio src="/sounds/pokemon-battle.mp3" id="sound-battle" loop></audio>
+    <audio src="/sounds/pokemon-ending.mp3" id="sound-ending" loop></audio>
     <script type="text/javascript" charset="utf-8" src="js/main.js"></script>
   </body>
 </html>
