Include sound effects

--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
         <div class="credits">
           <strong>Developer:</strong>
           <a href="http://github.com/luizbranco">Luiz Branco</a>
-          -
+        </div>
+        <div class="credits">
           <strong>Image Credits:</strong>
           <a href="http://gryphon-shifter.deviantart.com/">Jessica Parker</a>
+          -
+          <strong>Sound Credits:</strong>
+          <a href="https://www.freesound.org/people/Bertrof/">Bertrof</a>
           -
           <strong>Animation Inspiration:</strong>
           <a href="http://daneden.github.io/animate.css/">Daniel Eden</a>
@@ -69,9 +73,12 @@
         </div>
       </footer>
     </div>
-    <audio src="/sounds/pokemon-opening.mp3" id="sound-opening" loop></audio>
-    <audio src="/sounds/pokemon-battle.mp3" id="sound-battle" loop></audio>
-    <audio src="/sounds/pokemon-ending.mp3" id="sound-ending" loop></audio>
+    <audio src="/sounds/select.mp3" id="sound-select"></audio>
+    <audio src="/sounds/hit.mp3" id="sound-hit"></audio>
+    <audio src="/sounds/miss.mp3" id="sound-miss"></audio>
+    <audio src="/sounds/pokemon-opening.mp3" id="sound-opening" loop volume=".5"></audio>
+    <audio src="/sounds/pokemon-battle.mp3" id="sound-battle" loop volume=".5"></audio>
+    <audio src="/sounds/pokemon-ending.mp3" id="sound-ending" loop volume=".5"></audio>
     <script type="text/javascript" charset="utf-8" src="js/main.js"></script>
   </body>
 </html>
