--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
         <div id="match-board"></div>
       </section>
       <section id="score-board" class="hidden">
-        <h2>Score Board</h2>
-        <div id="score-board-content">
-          <ol class="hidden"></ol>
-          <div id="score-board-empty" class="hidden">You haven't played yet!</div>
-        </div>
-        <div class="btn-group">
-          <a href="/" class="btn hidden" id="score-board-menu">Menu</a>
-          <a href="#" class="btn hidden" id="score-board-close">Close</a>
+        <div>
+          <h2>Score Board</h2>
+          <div id="score-board-content">
+            <ol></ol>
+          </div>
+          <div class="btn-group">
+            <a href="/" class="btn hidden" id="score-board-menu">Menu</a>
+            <a href="#" class="btn hidden" id="score-board-close">Close</a>
+          </div>
         </div>
       </section>
       <footer>
