Adjust score multiplers by levels

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#" class="btn" data-mode="hard">Hard</a>
           </div>
         </div>
-        <a href="#" id="game-menu-score-board" class="btn">Score Board</a>
+        <a href="#" id="game-menu-score-board" class="btn">Highest Scores</a>
         <a href="rules.html" class="btn">How to Play</a>
         <a href="#" id="game-menu-quit" class="btn">Quit Game</a>
       </section>
@@ -44,7 +44,7 @@
       </section>
       <section id="score-board" class="hidden">
         <div>
-          <h2>Score Board</h2>
+          <h2>Highest Scores</h2>
           <div id="score-board-content">
             <ol></ol>
           </div>
