Hide imgs to avoid downloading later

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
     <audio src="/sounds/pokemon-opening.mp3" id="sound-opening" loop volume=".5"></audio>
     <audio src="/sounds/pokemon-battle.mp3" id="sound-battle" loop volume=".5"></audio>
     <audio src="/sounds/pokemon-ending.mp3" id="sound-ending" loop volume=".5"></audio>
+    <img src="/imgs/pokemon1.png" class="hidden"/>
+    <img src="/imgs/pokemon2.png" class="hidden"/>
+    <img src="/imgs/pokemon3.png" class="hidden"/>
+    <img src="/imgs/mew.png" class="hidden"/>
     <script type="text/javascript" charset="utf-8" src="js/main.js"></script>
   </body>
 </html>
