--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div id="game-menu-match">
           <h2>New Match</h2>
           <div id="game-menu-options">
-            <a href="#" class="btn" data-mode="easy">Easy</a>
-            <a href="#" class="btn" data-mode="medium">Medium</a>
-            <a href="#" class="btn" data-mode="hard">Hard</a>
+            <a href="#" class="btn" data-level="easy">Easy</a>
+            <a href="#" class="btn" data-level="medium">Medium</a>
+            <a href="#" class="btn" data-level="hard">Hard</a>
           </div>
         </div>
         <a href="#" id="game-menu-score-board" class="btn">Highest Scores</a>
