--- a/rules.html
+++ b/rules.html
@@ -8,7 +8,25 @@
   <body>
     <div class="wrapper">
       <h1>How To Play</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sit amet nunc id orci scelerisque varius. Cras nunc velit, ultricies ut purus non, dignissim mollis justo. Quisque vitae feugiat leo. Curabitur vel dui ornare, egestas massa quis, ullamcorper arcu. Morbi condimentum eu tortor ut facilisis. Morbi congue maximus risus eu sodales. Maecenas quam felis, bibendum eu velit quis, varius iaculis tortor. Duis suscipit eu erat quis mollis. Curabitur posuere eros neque.</p>
+      <p>Memory Game is challenging and has been a favorite for generations! The game itself requires concentration, observation and the ability to memorize and match pairs.</p>
+
+      <p>The objective of the game is to collect the most matching pairs in a short period of time. The faster you match them, the higher you score will be.</p>
+
+      <p>There are three levels of difficult:</p>
+
+      <ol>
+        <li>
+          <strong>Easy</strong> - 12 pairs
+        </li>
+        <li>
+          <strong>Medium</strong> - 15 pairs
+        </li>
+        <li>
+          <strong>Hard</strong> - 18 pairs
+        </li>
+      </ol>
+
+      <p>Once all the cards have been played, you will be able to find your score.</p>
       <a href="index.html" class="btn">Back</a>
       <footer>
         <div class="credits">
