Add final score to board

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
       </section>
       <section id="score-board" class="hidden">
         <div>
+          <div id="score-board-score" class="hidden">
+            You've scored <strong>9000</strong>
+          </div>
           <h2>Highest Scores</h2>
           <div id="score-board-content">
             <ol></ol>
