Use relative paths for assets

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <section id="match-screen" class="hidden">
         <header>
           <div class="match-right-menu">
-            <a href="/" id="match-quit">Quit Match</a>
+            <a href="index.html" id="match-quit">Quit Match</a>
           </div>
           <div class="match-display">
             <strong>Score</strong>
@@ -52,7 +52,7 @@
             <ol></ol>
           </div>
           <div class="btn-group">
-            <a href="/" class="btn hidden" id="score-board-menu">Menu</a>
+            <a href="index.html" class="btn hidden" id="score-board-menu">Menu</a>
             <a href="#" class="btn hidden" id="score-board-close">Close</a>
           </div>
         </div>
@@ -77,16 +77,16 @@
         </div>
       </footer>
     </div>
-    <audio src="/sounds/select.mp3" id="sound-select"></audio>
-    <audio src="/sounds/hit.mp3" id="sound-hit"></audio>
-    <audio src="/sounds/miss.mp3" id="sound-miss"></audio>
-    <audio src="/sounds/pokemon-opening.mp3" id="sound-opening" loop volume=".5"></audio>
-    <audio src="/sounds/pokemon-battle.mp3" id="sound-battle" loop volume=".5"></audio>
-    <audio src="/sounds/pokemon-ending.mp3" id="sound-ending" loop volume=".5"></audio>
-    <img src="/imgs/pokemon1.png" class="hidden"/>
-    <img src="/imgs/pokemon2.png" class="hidden"/>
-    <img src="/imgs/pokemon3.png" class="hidden"/>
-    <img src="/imgs/mew.png" class="hidden"/>
+    <audio src="sounds/select.mp3" id="sound-select"></audio>
+    <audio src="sounds/hit.mp3" id="sound-hit"></audio>
+    <audio src="sounds/miss.mp3" id="sound-miss"></audio>
+    <audio src="sounds/pokemon-opening.mp3" id="sound-opening" loop volume=".5"></audio>
+    <audio src="sounds/pokemon-battle.mp3" id="sound-battle" loop volume=".5"></audio>
+    <audio src="sounds/pokemon-ending.mp3" id="sound-ending" loop volume=".5"></audio>
+    <img src="imgs/pokemon1.png" class="hidden"/>
+    <img src="imgs/pokemon2.png" class="hidden"/>
+    <img src="imgs/pokemon3.png" class="hidden"/>
+    <img src="imgs/mew.png" class="hidden"/>
     <script type="text/javascript" charset="utf-8" src="js/main.js"></script>
   </body>
 </html>
